--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -673,12 +673,3 @@ ul {
   margin-top: 1em;
 }
 
-  .image-container {
-      margin-bottom: $list-item-spacing;
-      
-      img {
-        height: auto;
-        max-width: 100%;
-        min-width: 100%;
-      }
-      }
